logs/mobility/build.make.022.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:415:62: error: request for member ‘theta’ in ‘correctAngleBearingToPickUpCubePickUpController’, which is of non-class type ‘float’
  goodAngle = correctAngleBearingToPickUpCubePickUpController.theta + 3.1415926535;
                                                              ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:417:62: error: request for member ‘theta’ in ‘correctAngleBearingToPickUpCubePickUpController’, which is of non-class type ‘float’
  goodAngle = correctAngleBearingToPickUpCubePickUpController.theta;
                                                              ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
